--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_test_hy
+name: flutter_test_api
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -28,7 +28,6 @@ dependencies:
   http: ^0.13.3
   equatable: ^2.0.3
   mask_text_input_formatter: 
-  flutter_datetime_picker: 
     
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
