--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,9 @@ dependencies:
   flutter_bloc: ^7.3.0
   http: ^0.13.3
   equatable: ^2.0.3
-  mask_text_input_formatter: 
+  intl: ^0.17.0
+  flutter_form_builder: ^6.1.0+1
+  mask_text_input_formatter: ^2.0.0
     
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -50,8 +52,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
