--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   intl: ^0.17.0
   flutter_form_builder: ^6.1.0+1
   mask_text_input_formatter: ^2.0.0
+  fluttertoast: ^8.0.8
     
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
